--- a/blog/my-first-post/index.mdx
+++ b/blog/my-first-post/index.mdx
@@ -1,6 +1,10 @@
 ---
 title: "My First Post"
 date: "2021-07-23"
+hero_image: "./image1.jpg"
+hero_image_alt: "venice skateboarder on ramp"
+hero_image_credit_text: "Liene Geidane"
+hero_image_credit_link: "https://unsplash.com/photos/PdtFMPpIYRc"
 ---
 
 This is my first blog post! Isn't it _great_?
